--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/Eddie-Larsson/mapbox-print-pdf#readme",
   "dependencies": {
     "canvg": "github:canvg/canvg",
+    "cookie": "^0.4.1",
     "css-initials": "^0.2.0",
     "html2canvas": "https://github.com/Eddie-Larsson/html2canvas/releases/download/v1.0.0-alpha-ie.10/html2canvas-1.0.0-alpha-ie.10.tgz",
     "jspdf": "^1.3.5"
